--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ body {
 /* Style for header top */
 #header {
     position: sticky;
+    top: 0;
+    z-index: 9;
     background-color: #1F2937;
     box-shadow: 0 4px 6px -1px rgb(0, 0, 0, .3);
 }
@@ -29,7 +31,6 @@ body {
 }
 
 #nav-left {
-    /* width: 30%; */
     margin: 0 1rem;
     padding: 0 1rem;
     display: flex;
@@ -44,7 +45,6 @@ span {
 }
 
 #nav-right {
-    /* width: 70%; */
     display: flex;
     align-items: center;
     justify-content: end;
@@ -190,12 +190,12 @@ span {
     display: flex;
     margin: 34px;
     align-items: center;
+    gap: 3rem;
 
 }
 
 #courses .box {
     width: 33%;
-    padding: 1.5rem 0;
     margin: 0.5rem 1rem;
     background-color: #374151;
     border: 2px solid #302c2c;
@@ -208,7 +208,12 @@ span {
     height: 40vh;
     display: block;
     margin: auto;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+}
 
+.course-contents {
+    padding: 1.3rem;
 }
 
 .bon {
@@ -281,15 +286,12 @@ span {
 }
 
 footer {
-    /* max-height: 10vh; */
     width: 100%;
 }
 
 .f-container {
     display: flex;
     align-items: center;
-    /* flex-direction: column;
-    flex-wrap: wrap; */
     padding: 1rem 1.25rem;
 }
 
@@ -341,7 +343,8 @@ a:active,
 a:hover {
     transform: translateY(-2px);
 }
-a::before{
+
+a::before {
     content: "";
     position: absolute;
     top: 100%;
@@ -351,7 +354,8 @@ a::before{
     border-bottom: 2px solid #6B21A8;
     transition: all .3s linear;
 }
-a:hover:before{
+
+a:hover:before {
     width: 100%;
 }
 
@@ -393,7 +397,6 @@ a>svg {
 .btn {
     font-size: .8rem;
     font-weight: 600;
-    margin: 0 0.5rem;
     padding: 0.5rem 1rem;
     border-radius: 5px;
     background-color: rgb(244, 241, 241);
@@ -407,7 +410,6 @@ a>svg {
 }
 
 .n-btn {
-    margin: 0 0.25rem;
     padding: 0.5rem 0.75rem 0.5rem 0.75rem;
     display: inline-flex;
     align-items: center;
